# mod_azure_tts

./: CMakeLists.txt  README.md  azure_glue.cpp  azure_glue.h  mod_azure_tts.c  mod_azure_tts.h
